fix cropped cards, template1 configuration and a4-page css class to resume-config

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,13 +20,15 @@
     margin: 0;
   }
 
-  .a4-page {
+  .resume-conf {
+    width: 210mm;
+    box-shadow: none;
     line-height: 1.5;
   }
 }
 
-.a4-page {
-  width: 210mm;
+.resume-conf {
+  width: 100%;
   height: 297mm;
   padding: 20mm;
   box-sizing: border-box;
